@@ -377,18 +377,12 @@ rand_init(struct MT *mt, VALUE vseed)
     seed = rb_to_int(vseed);
 
     len = rb_absint_numwords(seed, 32, NULL);
-    if (MT_MAX_STATE < len)
-        len = MT_MAX_STATE;
     if (len > numberof(buf0))
         buf = ALLOC_N(unsigned int, len);
     sign = rb_integer_pack(seed, buf, len, sizeof(uint32_t), 0,
         INTEGER_PACK_LSWORD_FIRST|INTEGER_PACK_NATIVE_BYTE_ORDER);
     if (sign < 0)
         sign = -sign;
-    if (sign != 2) { /* not overflow */
-        while (0 < len && buf[len-1] == 0)
-            len--;
-    }
     if (len == 0) {
         buf[0] = 0;
         len = 1;
