@@ -1,3 +1,8 @@
+Wed Nov 20 19:45:22 2013  Tanaka Akira  <akr@fsij.org>
+
+	* random.c (rand_init): Make it possible to specify arbitrary array
+	  for init_genrand().
+
 Wed Nov 20 17:34:13 2013  Koichi Sasada  <ko1@atdot.net>
 
 	* parse.y (rb_gc_mark_symbols): set global_symbols.minor_marked only
